[package]
name = "evdev-share"
version = "0.1.0"
authors = ["George Thomas <georgefsthomas@gmail.com>"]
edition = "2018"

[[bin]]
path = "src/bin/client.rs"
name = "evdev-share-client"

[[bin]]
path = "src/bin/server.rs"
name = "evdev-share-server"

[dependencies]
clap = "3.0.0-beta.2"
evdev-rs = "0.4.0"
