[package]
name = "evdev-share"
version = "0.1.0"
authors = ["George Thomas <georgefsthomas@gmail.com>"]
edition = "2018"

[[bin]]
path = "src/bin/client.rs"
name = "evdev-share-client"

[[bin]]
path = "src/bin/server.rs"
name = "evdev-share-server"

[dependencies]
clap = "3.0.0-beta.2"
#TODO waiting on 0.4.1 - FromStr for enums
evdev-rs = { git = "https://github.com/ndesh26/evdev-rs", rev = "8e995b8" }
