[package]
name = "evdev-share"
version = "0.1.0"
authors = ["George Thomas <georgefsthomas@gmail.com>"]
edition = "2018"

[[bin]]
path = "src/bin/client.rs"
name = "evdev-share-client"

[[bin]]
path = "src/bin/server.rs"
name = "evdev-share-server"

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
evdev-rs = "0.6.1"
